Fix safari gradient / z-index projects overview

--- a/client/app/style/layout/_projects-overview.scss
+++ b/client/app/style/layout/_projects-overview.scss
@@ -26,6 +26,7 @@
 		background: linear-gradient(to bottom, rgba($lightGrey, 1) $desktopGradientH,rgba($lightGrey, 0) 100%);
 		margin-top: -$globalMargin;
 		z-index: 4;
+		-webkit-transform: translate3d(0, 0, 1px);
 
 		@media (max-width: $MQ_SMALL) {
 			margin-top: 0;
@@ -45,6 +46,8 @@
 		width: 100%;
 		background: linear-gradient(to top, rgba($lightGrey, 1) 0%,rgba($lightGrey, 0) 100%);
 		z-index: 4;
+		-webkit-transform: translate3d(0, 0, 1px);
+
 		@media (max-width: $MQ_SMALL) {
 			bottom: $mobileLineHeight + $globalMargin * 3.2;
 			right: 0;
@@ -84,6 +87,7 @@
 		z-index: 1;
 		@extend .top-left;
 		@extend .full;
+		-webkit-transform: translate3d(0, 0, 1px);
 		@media (max-width: $MQ_SMALL) {
 			z-index: 7;
 			pointer-events: none;
